leetcode fix #692. Top K Frequent Words